--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div id="startbanner">
     <div class="insideBanner">
         <div class="Banner">
-        <img src="/assets/hero-developer.png" alt="">
+        <img src="assets/hero-developer.png" alt="">
      <div class="message">
     "In 2025, I hope to become a Developer"
   </div>
@@ -62,7 +62,7 @@
         <div class="btn">Let's Discuss</div>
     </div>
     <div class="lowerrightblog">
-        <img src="/assets/working-developer.png" alt="">
+        <img src="assets/working-developer.png" alt="">
     </div>
         
          
@@ -128,7 +128,7 @@
 <!-- <div class="commitment">
     <div class="ctext">An open commitment by Biplob Karmakar</div>
     <div class="cimage">
-      <img src="/assets/facebook.png" alt="">
+      <img src="assets/facebook.png" alt="">
       <img src="/assets/github.png" alt="">
       <img src="/assets/linkedin.png" alt="">
     </div>
